# python-monkey

./: .gitignore  LICENSE  Makefile  PROTOCOL.md  README.md
.github/workflows/: ci.yml
examples/: index.html  server.py
js/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/src/: client.ts  console.ts  deserializer.ts  index.ts  react.tsx
js/tests/: console.test.ts  deserializer.test.ts
python/: pyproject.toml
python/src/python_monkey/: __init__.py  handler.py  serializer.py  server.py
python/tests/: test_handler.py  test_serializer.py
