[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-monkey"
version = "0.1.0"
description = "See your Python backend logs in browser DevTools. Like console.log() for Python."
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mohamed Aboelsoud" }]
keywords = ["logging", "devtools", "websocket", "debug", "browser", "console"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
    "Framework :: FastAPI",
    "Framework :: Django",
]

[project.urls]
Homepage = "https://github.com/maboelsoud/python-monkey"
Repository = "https://github.com/maboelsoud/python-monkey"
Issues = "https://github.com/maboelsoud/python-monkey/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
